[project]
name = "src"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.8",
    "langgraph>=1.0.3",
    "langchain-anthropic>=1.1.0",
    "loguru>=0.7.3",
]

[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Sebastian Ospina <sebasospina343@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^1.0.8"
langgraph = "^1.0.3"
langchain-anthropic = "^1.1.0"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
